# modern-cpp-project-template

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
.github/workflows/: ci.yml  clang-format.yml  clang-tidy.yml  coverage.yml  docs.yml
app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  bench_arithmetic.cpp  benchmarks.cpp
cmake/: CPackConfig.cmake  Cache.cmake  CompilerFlags.cmake  Coverage.cmake  Helpers.cmake  LTO.cmake  Logging.cmake  Options.cmake  Sanitizers.cmake  Tooling.cmake  Warnings.cmake
cmake/install/: InstallConfig.cmake  uninstall.cmake.in  version.hpp.in
cmake/options/: LTO.cmake  Sanitizers.cmake  Warnings.cmake
cmake/tools/: ClangFormat.cmake  ClangTidy.cmake  Coverage.cmake  Cppcheck.cmake  Doxygen.cmake
docs/: Doxyfile.in  mainpage.md
html/: arithmetic_8cpp.html  arithmetic_8cpp.js  arithmetic_8cpp__incl.map  arithmetic_8cpp__incl.md5  arithmetic_8hpp.html  arithmetic_8hpp.js  arithmetic_8hpp__dep__incl.map  arithmetic_8hpp__dep__incl.md5  arithmetic_8hpp_source.html  dir_000003_000001.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fba38f648377aa56ae5d69782adf9e53.html  dir_fba38f648377aa56ae5d69782adf9e53.js  files.html  graph_legend.html  index.html  index.js  mainpage_8md.html  namespacemath.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
include/math/: arithmetic.hpp
include/modern_cpp/: library.hpp
src/: CMakeLists.txt  arithmetic.cpp  library.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp  test_arithmetic.cpp  test_core.cpp  test_library.cpp  test_main.cpp  test_sanitizers.cpp
